Fix h3/intro content  heading  contrast and visibilty

--- a/assets/style.css
+++ b/assets/style.css
@@ -174,6 +174,10 @@ a:hover {
     match with the header and footer shadow */
 }
 
+h3 {
+    text-transform: uppercase;
+}
+
 @media screen and (max-width:850px) {
     .intro-container {
         flex-direction: column;
